Added help icon and configuration page

--- a/css/data_explorer.css
+++ b/css/data_explorer.css
@@ -133,8 +133,8 @@
 /*Limited data message box */
 
 .div_dataLimited {
-    background-color: #f5cccb;
-    color:#856162;
+    background-color: #fffbe5;
+    color:#5c3c00;
     padding: 3px 15px;
     margin: 15px 0 5px 0;
     border-radius: 6px;
