--- a/css/data_explorer.css
+++ b/css/data_explorer.css
@@ -53,6 +53,7 @@
     color: #1cabe2;
 }
 
+
 /*#root .pt-popover-target {
     padding: 1px 1px;
     height: 100%;
@@ -122,25 +123,59 @@
     justify-content: space-between;
 }
 
+.de_toolbar_items_wrapper {
+    border-top: none !important;
+}
+
 .de_vis_toolbar_wrapper {
     border-top: none !important;
 }
 
-.div_lastnobs{
+.header_download .de_toolbar_items_wrapper {
+    border-top: none !important;
+    background-color: #1cabe2;
+    border: 3px solid #1cabe2;
+    border-radius: 5px;
+    padding: 3px 8px;
+}
+
+.header_download .de_toolbar_items_wrapper:hover {
+    background-color: #199acb;
+    border: 3px solid #199acb;
+}
+
+.header_download .de_toolbar_items_wrapper span {
+    margin-left: 6px;
+}
+
+.header_download .de_toolbar_items_wrapper button::before {
+    color: #fff;
+}
+
+.header_download .de_toolbar_items_wrapper .pt-button {
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+}
+
+.header_download .de_toolbar_items_wrapper .pt-popover-open span {
+    color: #fff;
+}
+
+.div_lastnobs {
     margin-bottom: 20px;
 }
 
-.de_toolbar_items_wrapper{
+.de_toolbar_items_wrapper {
     flex-wrap: nowrap;
 }
-
 
 
 /*Limited data message box */
 
 .div_dataLimited {
     background-color: #fffbe5;
-    color:#5c3c00;
+    color: #5c3c00;
     padding: 3px 15px;
     margin: 15px 0 5px 0;
     border-radius: 6px;
@@ -191,3 +226,49 @@
     border-radius: 6px;
 }
 
+
+/*Help box*/
+
+#div_de_help_cnt {
+    position: fixed;
+    right: 80px;
+    bottom: 5px;
+    max-width: 120px;
+}
+
+#div_de_help {
+    background-color: #1cabe2;
+    border: 3px solid #1cabe2;
+    border-radius: 5px;
+    text-align: center;
+    width: 100%;
+    padding: 8px;
+    margin: 10px;
+    color: #fff;
+    position: fixed;
+    right: 80px;
+    bottom: 5px;
+    max-width: 120px;
+}
+
+#div_de_help a {
+    text-decoration: none;
+}
+
+#div_de_help span,
+#div_de_help i {
+    display: block;
+    margin-bottom: 3px;
+    color: #fff;
+}
+
+#div_de_help .closebtn {
+    position: absolute;
+    top: 0px;
+    right: 4px;
+    cursor: pointer;
+}
+
+#div_de_help .material-icons.md-18 {
+    font-size: 18px;
+}
