--- a/css/data_explorer.css
+++ b/css/data_explorer.css
@@ -21,6 +21,9 @@
 
 /*Unsets properties forced at body level*/
 
+#root div[role="button"]:focus{
+    outline:none !important;
+}
 #root button[type="button"],
 .data-explorer button[type="reset"],
 .data-explorer button[type="submit"] {
@@ -29,6 +32,9 @@
     border-radius: unset;
     box-shadow: unset;
     border: unset;
+    line-height: unset;
+    min-height: unset;
+    min-width: unset;
 }
 
 .data-explorer div[role="button"] {
@@ -41,12 +47,15 @@
 
 /*Unsets the color change on focus set at body level*/
 
+#root a,
 #root .button:focus,
 #root [type=button]:focus,
 #root [type=reset]:focus,
 #root [type=submit]:focus,
 #root button:focus {
-    color: unset;
+    color: unset !important;
+    outline: none !important;
+    outline-offset: none !important;
 }
 
 #root button:hover {
@@ -70,6 +79,7 @@
     font-style: normal;
     opacity: 0.8 !important;
     padding: 2px;
+    min-width: unset;
 }
 
 
@@ -147,6 +157,8 @@
 
 .header_download .de_toolbar_items_wrapper span {
     margin-left: 6px;
+    margin-top: 6px;
+    margin-bottom: 6px;
 }
 
 .header_download .de_toolbar_items_wrapper button::before {
