--- a/css/data_explorer.css
+++ b/css/data_explorer.css
@@ -21,6 +21,9 @@
 
 /*Unsets properties forced at body level*/
 
+#root div[role="button"]:focus{
+    outline:none !important;
+}
 #root button[type="button"],
 .data-explorer button[type="reset"],
 .data-explorer button[type="submit"] {
@@ -31,6 +34,7 @@
     border: unset;
     line-height: unset;
     min-height: unset;
+    min-width: unset;
 }
 
 .data-explorer div[role="button"] {
@@ -43,6 +47,7 @@
 
 /*Unsets the color change on focus set at body level*/
 
+#root a,
 #root .button:focus,
 #root [type=button]:focus,
 #root [type=reset]:focus,
