--- a/css/data_explorer.css
+++ b/css/data_explorer.css
@@ -373,18 +373,22 @@
 }
 
 #de_map {
-    height: 500px;
-    min-height: 500px;
-    max-width: 800px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
 }
 
-#de_map_message{
-    height: 500px;
-    padding: 16px;
-    background-color: #ddd !important;
+#de_map_message {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(221, 221, 221, 0.95);
+    z-index: 200;
+    padding: 25px 20px 20px 20px;
 }
 
-#de_map_message div{
+#de_map_message div {
     margin-top: 16px;
 }
 
